[package]
name = "nicolive-comments"
version = "0.2.0"
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
futures-util = "0.3.15"
http = "0.2.4"
paw = "1.0.0"
reqwest = "0.11.3"
scraper = "0.12.0"
serde = "1.0.126"
serde_json = "1.0.64"
structopt = { version = "0.3.21", features = ["paw"] }
tokio = { version = "1.6.0", features = ["full"] }
tokio-tungstenite = { version = "0.14.0", features = ["rustls-tls"] }
url = { version = "2.2.2", features = ["serde"] }
